<resources>
    <string name="app_name">book_library_2</string>
    <string name="summary">Summary</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="navigation_drawer_open" />
    <string name="summary_in_100_words">Summary in 100 words</string>
    <string name="summary_in_200_words">Summary in 200 words</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="submit">SUBMIT</string>
    <string name="navigation_drawer" />
    <string name="navigation_drawer_close" />
    <string name="fiction">Fiction</string>
    <string name="non_fiction">Non-Fiction</string>
    <string name="economics">Economics</string>
    <string name="biography">Biography</string>
    <string name="self_help">Self-Help</string>
</resources>